[gd_scene load_steps=12 format=2]

[ext_resource path="res://NPC/NPC.gd" type="Script" id=1]
[ext_resource path="res://assets/characters/npc_male1/npc_male1.png" type="Texture" id=2]
[ext_resource path="res://sound/NPC_voice/sfx_malevoice1.wav" type="AudioStream" id=3]
[ext_resource path="res://particles/Dialogue/Dialogue.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]

resource_name = "down"
length = 0.7
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 131, 132, 133, 134, 135, 136, 137, 138 ]
}

[sub_resource type="Animation" id=2]

resource_name = "left"
length = 0.8
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 118, 119, 120, 121, 122, 123, 124, 125 ]
}

[sub_resource type="Animation" id=3]

resource_name = "right"
length = 0.8
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 144, 145, 146, 147, 148, 149, 150, 151 ]
}

[sub_resource type="Animation" id=4]

resource_name = "standing"
length = 1.6
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 136, 137 ]
}

[sub_resource type="Animation" id=5]

length = 0.6
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 105, 106, 107, 108, 109, 110, 111 ]
}

[sub_resource type="CircleShape2D" id=6]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="NPC" type="KinematicBody2D"]

position = Vector2( 354.975, 228.76 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )

[node name="NPCSprite" type="Sprite" parent="." index="0"]

scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 2 )
vframes = 21
hframes = 13
frame = 137
region_rect = Rect2( 512, 0, 128, 128 )
_sections_unfolded = [ "Animation", "Region", "Transform", "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="NPCSprite" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 0
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/down = SubResource( 1 )
anims/left = SubResource( 2 )
anims/right = SubResource( 3 )
anims/standing = SubResource( 4 )
anims/up = SubResource( 5 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 0.788788, 23.9971 )
scale = Vector2( 1.55649, 1.76062 )
shape = SubResource( 6 )

[node name="Area2D" type="Area2D" parent="." index="2"]

position = Vector2( -1.91998, 17.74 )
scale = Vector2( 3.06078, 2.92188 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

position = Vector2( 1.62767, -0.573242 )
scale = Vector2( 2.36835, 2.28293 )
shape = SubResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="DirectionTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="InteractionEndTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="voiceLine" type="AudioStreamPlayer2D" parent="." index="5"]

stream = ExtResource( 3 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Dialogue" parent="." index="6" instance=ExtResource( 4 )]

margin_left = -76.0
margin_top = -128.0
margin_right = 83.0
margin_bottom = -37.0

[connection signal="end_dialogue" from="." to="Dialogue" method="_on_NPC_end_dialogue"]

[connection signal="start_dialogue" from="." to="Dialogue" method="_on_NPC_start_dialogue"]

[connection signal="body_shape_entered" from="Area2D" to="." method="_on_Area2D_body_shape_entered"]

[connection signal="body_shape_exited" from="Area2D" to="." method="_on_Area2D_body_shape_exited"]

[connection signal="timeout" from="DirectionTimer" to="." method="_on_DirectionTimer_timeout"]

[connection signal="timeout" from="InteractionEndTimer" to="." method="_on_InteractionEndTimer_timeout"]


